5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4075/executions/1643_2711.log
== SUBMITION (2019-04-15 17:25:23) 
-- CODE:
valor=float(input("leia o valor:"))
a=int(input("leia a quantidade de tickets do RU:"))
b=float(input("leia o valor dos tickets:"))
c=int(input("leia a quantidade de passes de onibus:"))
d=float(input("leia o valor dos passe:"))
soma= (a*b)+(c*d)

if(valor>=soma):
	mensagem=SUFICIENTE
else:
	mensagem=INSUFICIENTE

print(mensagem.upper())

-- EXECUTION TIME:
0.191515
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2711/main.py", line 9, in <module>
    mensagem=SUFICIENTE
NameError: name 'SUFICIENTE' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 17:25:36) 
-- CODE:
valor=float(input("leia o valor:"))
a=int(input("leia a quantidade de tickets do RU:"))
b=float(input("leia o valor dos tickets:"))
c=int(input("leia a quantidade de passes de onibus:"))
d=float(input("leia o valor dos passe:"))
soma= (a*b)+(c*d)

if(valor>=soma):
	mensagem=SUFICIENTE
else:
	mensagem=INSUFICIENTE

print("mensagem.upper()")

-- EXECUTION TIME:
0.174112
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2711/main.py", line 9, in <module>
    mensagem=SUFICIENTE
NameError: name 'SUFICIENTE' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 17:26:42) 
-- CODE:
valor=float(input("leia o valor:"))
a=int(input("leia a quantidade de tickets do RU:"))
b=float(input("leia o valor dos tickets:"))
c=int(input("leia a quantidade de passes de onibus:"))
d=float(input("leia o valor dos passe:"))
soma= (a*b)+(c*d)

if(valor>=soma):
	mensagem="SUFICIENTE"
else:
	mensagem="INSUFICIENTE"

print(mensagem.upper())

-- EXECUTION TIME:
0.16831
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
